--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Follw Along Link Highlighter</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 
 </head>
 
